--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <style>
-            .button {
+            button {
             background-color: blue;
             border: none;
             color: white;
@@ -11,7 +11,7 @@
             font-size: 16px;
             cursor: pointer
             }
-            .button:hover{
+            button:hover{
                 background-color:darkblue;
             }
             li {
@@ -59,7 +59,7 @@
                 text-transform: uppercase;
                 transform: rotate(-5deg)
                             skew(-5deg);
-                background-color: #ffc;
+                background-color: yellow
             }
         </style>
 
@@ -75,7 +75,7 @@
         <p style="color:rebeccapurple">
             Press link below to get good.
         </p>
-        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Link to get good</a>
+        <a style="margin: 44.2%;"; href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Link to get good</a>
 
         <h2 style="color:yellow">
             This is great text, you should read it.
@@ -92,11 +92,11 @@
         <h3>My button. Do not press it!</h3>
         
         <form>
-            <button formaction="https://downloadmoreram.com/" class="button">Don't do it!</button>
+            <button formaction="https://downloadmoreram.com/">Don't do it!</button>
         </form>
         <h3>Another button</h3>
         <form>
-            <button formaction="https://theuselessweb.com/" class="button">Press this one instead!</button>
+            <button formaction="https://theuselessweb.com/">Press this one instead!</button>
         </form>
         <h3>List of the 5 commandments:</h3>
             <ol>
