--- a/index.html
+++ b/index.html
@@ -1,71 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <style>
-            button {
-            background-color: blue;
-            border: none;
-            color: white;
-            padding: 15px 25px;
-            text-align: center;
-            font-size: 16px;
-            cursor: pointer
-            }
-            button:hover{
-                background-color:darkblue;
-            }
-            li {
-                color:aqua;
-                font-family:sans-serif;
-                font-style: oblique;
-                text-align: left;
-            }
-            body {
-                background-image: url('images/img_background.jpg');
-                background-repeat: no-repeat;
-                background-size: cover;
-            }
-            h1 {
-                font-family: fantasy;
-                text-shadow: 2px 2px gray;
-                text-align: center;
-            }
-            p {
-                font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-                text-shadow: 1px 1px black;
-                text-align: center;
-            }
-            h2 {
-                font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
-                text-shadow:1px 1px grey;
-            }
-            h3 {
-                font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-                color:lightgoldenrodyellow;
-                font-size:larger;
-                text-align: left;
-            }
-
-            section {
-                height: 100vh;
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                text-align: center;
-            }
-
-            .slanted {
-                font-size: 60px;
-                text-transform: uppercase;
-                transform: rotate(-5deg)
-                            skew(-5deg);
-                background-color: yellow
-            }
-        </style>
-
-        <title>
-            HTML testing
-        </title>
+        <meta charset="utf-8">
+        <title>HTML testing</title>
+    <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
@@ -83,6 +21,7 @@
         <p style="color: cornflowerblue;">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, tempora? Repudiandae facere numquam quos delectus maxime. Autem est fugit cumque hic aperiam quos, iure molestiae beatae in. Accusantium ullam ex ipsam vel unde eum pariatur adipisci iste quae aliquam eligendi quo, rem animi eveniet, quam consequuntur cum illum delectus, atque nulla dolorum laudantium incidunt? Impedit ut, et quaerat facere, est itaque vero earum natus, laboriosam eius repellat. Beatae maxime atque ab rerum sed enim placeat ad blanditiis vitae mollitia delectus eum deserunt reiciendis libero debitis dicta autem ipsa, voluptate corporis tenetur quod? Suscipit porro autem, obcaecati molestiae atque amet modi.
         </p>
+  
         <h3>List of great things</h3>
             <ul>
                 <li>Coffee</li>
@@ -90,7 +29,7 @@
                 <li>Kool-Aid</li>
             </ul>
         <h3>My button. Do not press it!</h3>
-        
+
         <form>
             <button formaction="https://downloadmoreram.com/">Don't do it!</button>
         </form>
@@ -106,11 +45,15 @@
                 <li>To be or not to be...</li>
                 <li>Drink Coffee everyday</li>
             </ol>
+        <div class="rotating" style="width: 20; height: 20; align-content: center; line-height: 100px;">
+            <img src="images/flyin-1.png" width="100" height="400"/>
+        </div>
             <section>
-                <span 
-                class="slanted">Police Line - Do Not Cross
+                <span class="slanted">
+                    Hella cool
                 </span>
             </section>
+
     </body>
 </html>
 
