Changed link thingy

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </form>
         <h3>Another button</h3>
         <form>
-            <button formaction="https://theuselessweb.com/">Press this one instead!</button>
+            <button formaction="https://prytztech.com/">Press this one instead!</button>
         </form>
         <h3>List of the 5 commandments:</h3>
             <ol>
