Added spinning wheel

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>HTML testing</title>
+        <title>Nice title</title>
     <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
         <h1 style="color:lightskyblue;font-size:100px;">
-            Hello 90s
+            Hello 90's
         </h1>
         <p style="color:rebeccapurple">
             Press link below to get good.
@@ -37,6 +37,7 @@
         <form>
             <button formaction="https://prytztech.com/">Press this one instead!</button>
         </form>
+
         <h3>List of the 5 commandments:</h3>
             <ol>
                 <li>Drink Coffee everyday</li>
@@ -45,6 +46,9 @@
                 <li>To be or not to be...</li>
                 <li>Drink Coffee everyday</li>
             </ol>
+        <div class="center">
+            <img src="images/wheeloffortune.png" class=rotating width="400" height="400" style="align-content: center;"/>
+        </div>
         <div class="rotating" style="width: 20; height: 20; align-content: center; line-height: 100px;">
             <img src="images/flyin-1.png" width="100" height="400"/>
         </div>
